--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+/Users/jiyoung/Desktop/oauth2-kakao/src/main/resources/application.yml
+
 ### STS ###
 .apt_generated
 .classpath
